--- a/src/_patterns/02-components/bolt-device-viewer/src/_device-viewer--iphone8.scss
+++ b/src/_patterns/02-components/bolt-device-viewer/src/_device-viewer--iphone8.scss
@@ -2,20 +2,14 @@ $device-shadow: 0 1px 2px 1px rgba(6,10,36,0.10), 0 5px 10px 1px rgba(6,10,36,0.
 
 
 .c-bolt-iphone8-viewer {
-  width: 375px;
-  height: 667px;
-  padding: 105px 24px;
+  width: 100%;
+  max-width: 375px + (24px * 2);
   background-color: #d9dbdc;
   border-radius: 56px;
   box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2), $device-shadow;
-  display: inline-block;
-  position: relative;
-  box-sizing: content-box; //Required for now till updated to be fluid in size.
 
   &.c-bolt-iphone8-viewer--landscape {
-    padding: 24px 105px;
-    height: 375px;
-    width: 667px;
+    max-width: 667px + (105px * 2);
   }
 
   &.c-bolt-iphone8-viewer--gold {
@@ -25,77 +19,61 @@ $device-shadow: 0 1px 2px 1px rgba(6,10,36,0.10), 0 5px 10px 1px rgba(6,10,36,0.
   &.c-bolt-iphone8-viewer--black {
     background-color: #464646;
     box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.7), $device-shadow;
-
-    &:before {
-      background-color: #080808;
-    }
-
-    &:after {
-      box-shadow:
-        inset 0 0 3px 0 rgba(0, 0, 0, 0.1),
-        inset 0 0 6px 3px #212121;
-    }
   }
+}
 
+.c-bolt-iphone8-viewer__inner {
+  padding: 105px 24px;
 
-
+  .c-bolt-iphone8-viewer--landscape & {
+    padding: 24px 105px;
+  }
 
   &:before {
     width: calc(100% - 12px);
     height: calc(100% - 12px);
-    position: absolute;
     top: 6px;
-    content: '';
     left: 6px;
     border-radius: 50px;
     background-color: #f8f8f8;
-    z-index: 1;
-    pointer-events: none; // So scrolling works / mouse doesn't get blocked.
+
+    .c-bolt-iphone8-viewer--black & {
+      background-color: #080808;
+    }
   }
 
   &:after {
+    content: '';
+    top: 8px;
+    left: 8px;
     width: calc(100% - 16px);
     height: calc(100% - 16px);
-    position: absolute;
-    top: 8px;
-    content: '';
-    left: 8px;
     border-radius: 48px;
-    box-shadow:inset 0 0 3px 0 rgba(0, 0, 0, 0.1),
-    inset 0 0 6px 3px #FFFFFF;
-    z-index: 2;
-    pointer-events: none; // So scrolling works / mouse doesn't get blocked.
+    box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.1), inset 0 0 6px 3px #FFFFFF;
+
+    .c-bolt-iphone8-viewer--black & {
+      box-shadow : inset 0 0 3px 0 rgba(0, 0, 0, 0.1),
+      inset 0 0 6px 3px #212121;
+    }
   }
 }
 
+
 .c-bolt-iphone8-viewer__screen {
-  width: 100%;
-  position: relative;
-  // height: 100%;
-  height: 0;
-  z-index: 2;
   background-color: bolt-color(black);
   background-image: linear-gradient(to bottom, #b3b3b7 0%, #424044 100%);
-  overflow: hidden;
-  display: block;
-  border-radius: 1px;
   box-shadow: 0 0 0 3px #111;
-  overflow: hidden; // Unfortunately zooming + scrolling is very, very tricky. Forcing this for now.
-
   padding-bottom: 177.78636649%;
-  
 
   .c-bolt-iphone8-viewer--landscape & {
     padding-bottom: 56.24728261%;
   }
 }
 
-.c-bolt-iphone8-viewer__top-bar, 
+.c-bolt-iphone8-viewer__top-bar,
 .c-bolt-iphone8-viewer__bottom-bar {
   height: 3px;
   background-color: black;
-  width: 100%;
-  display: block;
 
   .c-bolt-iphone8-viewer--gold & {
     background-color: white;
@@ -106,24 +84,20 @@ $device-shadow: 0 1px 2px 1px rgba(6,10,36,0.10), 0 5px 10px 1px rgba(6,10,36,0.
   }
 }
 
-.c-bolt-iphone8-viewer__middle-bar {
-  width: 3px;
-  height: 4px;
-  top: 0px;
-  left: 90px;
-  background-color: black;
-  position: absolute;
-}
+// .c-bolt-iphone8-viewer__middle-bar {
+//   width: 3px;
+//   height: 4px;
+//   top: 0px;
+//   left: 90px;
+//   background-color: black;
+// }
 
 .c-bolt-iphone8-viewer__home {
-  border-radius: 100%;
   width: 68px;
   height: 68px;
-  position: absolute;
   left: 50%;
   margin-left: -34px;
   bottom: 22px;
-  z-index: 3;
   background-color: rgb(48,50,51);
   background-image: linear-gradient(135deg, rgba(48,50,51,1) 0%,rgba(181,183,185,1) 50%,rgba(240,242,242,1) 69%,rgba(48,50,51,1) 100%);
 
@@ -133,7 +107,7 @@ $device-shadow: 0 1px 2px 1px rgba(6,10,36,0.10), 0 5px 10px 1px rgba(6,10,36,0.
     margin-left: 0;
     left: 22px;
   }
-  
+
   &:before {
     background-color: #f8f8f8;
     position: absolute;
@@ -288,12 +262,9 @@ $device-shadow: 0 1px 2px 1px rgba(6,10,36,0.10), 0 5px 10px 1px rgba(6,10,36,0.
   background-color: #3c3d3d;
   width: 12px;
   height: 12px;
-  position: absolute;
   top: 24px;
   left: 50%;
   margin-left: -6px;
-  border-radius: 100%;
-  z-index: 3;
 
   .c-bolt-iphone8-viewer--black & {
     background-color: #080808;
