refactor: swap out hard-coded icon component w/ Twig include

--- a/src/_patterns/02-components/bolt-device-viewer/src/device-viewer.twig
+++ b/src/_patterns/02-components/bolt-device-viewer/src/device-viewer.twig
@@ -59,8 +59,17 @@
         {% endblock %}
 
         {% if magnify %}
-          <div class="c-bolt-device-viewer__overlay">
-            <bolt-icon name="search" size="xlarge" background="circle" class="c-bolt-device-viewer__overlay-icon" />
+          <div class="c-bolt-image-zoom__overlay">
+            {% include "@bolt/icon.twig" with {
+              name: "search",
+              size: "xlarge",
+              background: "circle",
+              attributes: {
+                class: [
+                  "c-bolt-image-zoom__overlay-icon"
+                ]
+              }
+            } only %}
           </div>
         {% endif %}
       </bolt-device-screen>
