refactor: rename twig classes of image tilt include to reflect base image zoom component

--- a/src/_patterns/02-components/bolt-device-viewer/src/parts/_screen-tilt.twig
+++ b/src/_patterns/02-components/bolt-device-viewer/src/parts/_screen-tilt.twig
@@ -1,9 +1,9 @@
-<span class="c-bolt-deview-viewer__tilt c-bolt-deview-viewer__tilt--top-left"></span>
-<span class="c-bolt-deview-viewer__tilt c-bolt-deview-viewer__tilt--top-center"></span>
-<span class="c-bolt-deview-viewer__tilt c-bolt-deview-viewer__tilt--top-right"></span>
-<span class="c-bolt-deview-viewer__tilt c-bolt-deview-viewer__tilt--middle-left"></span>
-<span class="c-bolt-deview-viewer__tilt c-bolt-deview-viewer__tilt--middle-center"></span>
-<span class="c-bolt-deview-viewer__tilt c-bolt-deview-viewer__tilt--middle-right"></span>
-<span class="c-bolt-deview-viewer__tilt c-bolt-deview-viewer__tilt--bottom-left"></span>
-<span class="c-bolt-deview-viewer__tilt c-bolt-deview-viewer__tilt--bottom-center"></span>
-<span class="c-bolt-deview-viewer__tilt c-bolt-deview-viewer__tilt--bottom-right"></span>
+<span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--top-left"></span>
+<span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--top-center"></span>
+<span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--top-right"></span>
+<span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--middle-left"></span>
+<span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--middle-center"></span>
+<span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--middle-right"></span>
+<span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--bottom-left"></span>
+<span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--bottom-center"></span>
+<span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--bottom-right"></span>
