--- a/src/_patterns/02-components/bolt-tooltip/src/tooltip.twig
+++ b/src/_patterns/02-components/bolt-tooltip/src/tooltip.twig
@@ -1,12 +1,12 @@
 <div class="c-bolt-band">
   <p>
     You can
-    <span class="bolt-tooltip action x-left y-down">
-      <mark class="bolt-tooltip__trigger is-active" aria-describedby="tooltip-1">
+    <span class="c-bolt-tooltip action x-left y-down">
+      <mark class="c-bolt-tooltip__trigger is-active" aria-describedby="tooltip-1">
         hover over this
       </mark>
-      <span id="tooltip-1" class="bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="bolt-tooltip__content-bubble">
+      <span id="tooltip-1" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+        <span class="c-bolt-tooltip__content-bubble">
           <span class="o-bolt-ui-list o-bolt-ui-list--small">
             <span class="o-bolt-ui-list__item">
               List Item
@@ -25,12 +25,12 @@
   </p>
   <p>
     Here is a second paragraph of text. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. And then
-    <span class="bolt-tooltip help x-center y-down nowrap">
-      <mark class="bolt-tooltip__trigger" aria-describedby="tooltip-2">
+    <span class="c-bolt-tooltip help x-center y-down nowrap">
+      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-2">
         another tooltip
       </mark>
-      <span id="tooltip-2" class="bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="bolt-tooltip__content-bubble">
+      <span id="tooltip-2" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+        <span class="c-bolt-tooltip__content-bubble">
           Short and sweet, and center
         </span>
       </span>
@@ -38,68 +38,68 @@
     Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus.
   </p>
   <p>
-    <span class="bolt-tooltip help x-left y-down nowrap">
-      <mark class="bolt-tooltip__trigger" aria-describedby="tooltip-left">
+    <span class="c-bolt-tooltip help x-left y-down nowrap">
+      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-left">
         Left
       </mark>
-      <span id="tooltip-left" class="bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="bolt-tooltip__content-bubble">
+      <span id="tooltip-left" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+        <span class="c-bolt-tooltip__content-bubble">
           left aligned
         </span>
       </span>
     </span>
     •
-    <span class="bolt-tooltip help x-center y-down nowrap">
-      <mark class="bolt-tooltip__trigger" aria-describedby="tooltip-center">
+    <span class="c-bolt-tooltip help x-center y-down nowrap">
+      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-center">
         Center
       </mark>
-      <span id="tooltip-center" class="bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="bolt-tooltip__content-bubble">
+      <span id="tooltip-center" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+        <span class="c-bolt-tooltip__content-bubble">
           center aligned
         </span>
       </span>
     </span>
     •
-    <span class="bolt-tooltip help x-right y-down nowrap">
-      <mark class="bolt-tooltip__trigger" aria-describedby="tooltip-right">
+    <span class="c-bolt-tooltip help x-right y-down nowrap">
+      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-right">
         Right
       </mark>
-      <span id="tooltip-right" class="bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="bolt-tooltip__content-bubble">
+      <span id="tooltip-right" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+        <span class="c-bolt-tooltip__content-bubble">
           right aligned
         </span>
       </span>
     </span>
   </p>
   <p>
-    <span class="bolt-tooltip help x-left y-up nowrap">
-      <mark class="bolt-tooltip__trigger" aria-describedby="tooltip-up-left">
+    <span class="c-bolt-tooltip help x-left y-up nowrap">
+      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-up-left">
         Up Left
       </mark>
-      <span id="tooltip-up-left" class="bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="bolt-tooltip__content-bubble">
+      <span id="tooltip-up-left" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+        <span class="c-bolt-tooltip__content-bubble">
           left aligned
         </span>
       </span>
     </span>
     •
-    <span class="bolt-tooltip help x-center y-up nowrap">
-      <mark class="bolt-tooltip__trigger" aria-describedby="tooltip-up-center">
+    <span class="c-bolt-tooltip help x-center y-up nowrap">
+      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-up-center">
         Up Center
       </mark>
-      <span id="tooltip-up-center" class="bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="bolt-tooltip__content-bubble">
+      <span id="tooltip-up-center" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+        <span class="c-bolt-tooltip__content-bubble">
           center aligned
         </span>
       </span>
     </span>
     •
-    <span class="bolt-tooltip help x-right y-up nowrap">
-      <mark class="bolt-tooltip__trigger" aria-describedby="tooltip-up-right">
+    <span class="c-bolt-tooltip help x-right y-up nowrap">
+      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-up-right">
         Up Right
       </mark>
-      <span id="tooltip-up-right" class="bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="bolt-tooltip__content-bubble">
+      <span id="tooltip-up-right" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+        <span class="c-bolt-tooltip__content-bubble">
           right aligned
         </span>
       </span>
