--- a/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.scss
+++ b/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.scss
@@ -20,8 +20,17 @@ bolt-ratio {
   * 1. Fallback selector if JS isn't disabled, but hasn't kicked in yet.
   * 2. Fallback selector for browsers not supporting ::slotted(*) selector
   */
-bolt-ratio > *, /* [1] */
-.o-bolt-ratio__inner, /* [2] */
+bolt-ratio > *,
+.o-bolt-ratio__inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  min-width: 100%; // workaround for content w/ hard-coded height & width
+  min-height: 100%; // workaround for content w/ hard-coded height & width
+}
+
 .o-bolt-ratio__inner ::slotted(*) {
   position: absolute;
   top: 0;
