--- a/src/_patterns/02-components/bolt-tooltip/src/tooltip.twig
+++ b/src/_patterns/02-components/bolt-tooltip/src/tooltip.twig
@@ -1,7 +1,7 @@
 <div class="c-bolt-band">
   <p>
     You can
-    <span class="c-bolt-tooltip action x-left y-down">
+    <span class="c-bolt-tooltip c-bolt-tooltip--action is-left is-down">
       <mark class="c-bolt-tooltip__trigger is-active" aria-describedby="tooltip-1">
         hover over this
       </mark>
@@ -25,7 +25,7 @@
   </p>
   <p>
     Here is a second paragraph of text. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. And then
-    <span class="c-bolt-tooltip help x-center y-down nowrap">
+    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-center is-down">
       <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-2">
         another tooltip
       </mark>
@@ -38,7 +38,7 @@
     Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus.
   </p>
   <p>
-    <span class="c-bolt-tooltip help x-left y-down nowrap">
+    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-left is-down">
       <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-left">
         Left
       </mark>
@@ -49,7 +49,7 @@
       </span>
     </span>
     •
-    <span class="c-bolt-tooltip help x-center y-down nowrap">
+    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-center is-down">
       <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-center">
         Center
       </mark>
@@ -60,7 +60,7 @@
       </span>
     </span>
     •
-    <span class="c-bolt-tooltip help x-right y-down nowrap">
+    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-right is-down">
       <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-right">
         Right
       </mark>
@@ -72,7 +72,7 @@
     </span>
   </p>
   <p>
-    <span class="c-bolt-tooltip help x-left y-up nowrap">
+    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-left is-up">
       <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-up-left">
         Up Left
       </mark>
@@ -83,7 +83,7 @@
       </span>
     </span>
     •
-    <span class="c-bolt-tooltip help x-center y-up nowrap">
+    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-center is-up">
       <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-up-center">
         Up Center
       </mark>
@@ -94,7 +94,7 @@
       </span>
     </span>
     •
-    <span class="c-bolt-tooltip help x-right y-up nowrap">
+    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-right is-up">
       <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-up-right">
         Up Right
       </mark>
