--- a/src/_patterns/01-core/07-utilities/utilities-spacing/_utilities.spacing.scss
+++ b/src/_patterns/01-core/07-utilities/utilities-spacing/_utilities.spacing.scss
@@ -1,3 +1,8 @@
+$bolt-export-data: false !global;
+
+@import '@bolt/settings-all';
+@import '@bolt/tools-all';
+
 $bolt-direction-index: 0;
 
 @each $property in $bolt-spacing-properties {
