chore: enable video Sass partial being imported in the @bolt/components-all package

--- a/src/_patterns/02-components/components-all/components-all.scss
+++ b/src/_patterns/02-components/components-all/components-all.scss
@@ -14,7 +14,7 @@
 @import '@bolt/components-background-shapes';
 @import '@bolt/components-color-swatch';
 @import '@bolt/components-device-viewer';
-// @import '@bolt/components-video';
+@import '@bolt/components-video';
 @import '@bolt/components-figure';
 @import '@bolt/components-headline';
 @import '@bolt/components-image';
