feat: slightly increase stroke size in smaller SVG icons

--- a/src/_patterns/02-components/bolt-icon/src/icon.scss
+++ b/src/_patterns/02-components/bolt-icon/src/icon.scss
@@ -73,6 +73,10 @@ bolt-icon[size='xlarge'],
   padding: 16px;
 }
 
+.c-bolt-icon--small > .c-bolt-icon__icon {
+  stroke: currentColor;
+  stroke-width: 2px;
+}
 
 
 .c-bolt-icon__background {
